--- a/cliscale.ini
+++ b/cliscale.ini
@@ -1,7 +1,10 @@
-[local]
-connection_string=alex@localhost
-binpaths=/usr/bin
+# add more sections to add additional workers
+# the ini [section name] isn't used in the code, you pick a name for the worker
+# binpaths must be set correctly or the command executed by ssh won't work.
+[local_worker]
+connection_string=user@localhost
+binpaths=/usr/bin:/home/user/go/bin
 
-[aws1]
-connection_string=ubuntu@alexlyn.ch
-binpaths=/home/ubuntu/go/bin;/usr/bin
+#[remote_worker_1]
+#connection_string=[username]@[host]
+#binpaths=/some/paths/to/bins:/other/path
